# flyby-robotics-project

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  cleanup.sh  format.sh  local_setup.sh  prev_run.sh  run.sh
lidar_client/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile
lidar_client/config/: config.json
lidar_client/src/: lidar_client.cpp  lidar_client.h  main.cpp  utils.cpp  utils.h
lidar_receiver/: CMakeLists.txt  Dockerfile
lidar_receiver/config/: config.json
lidar_receiver/src/: lidar_receiver.cpp  lidar_receiver.h  main.cpp  utils.cpp  utils.h
